test-data/invalid/multiple-singular.jsx
const Test = () => (
    <PluralTranslate>
        <Singular />
        <Singular />
    </PluralTranslate>
);
